Fix for Safari flickering bug

--- a/src/components/ContentContainer.module.css
+++ b/src/components/ContentContainer.module.css
@@ -13,12 +13,10 @@
 
 .page-front {
     transform: rotateY(0deg);
-    -webkit-backface-visibility: hidden;
     border-left: 1px dotted var(--book-bg-color);
 }
 
 .page-back {
-    /* transform: rotateY(180deg); */
     transform: rotateY(180deg) translateZ(1px);
 }
 
