--- a/src/components/widgets/PieChart.module.css
+++ b/src/components/widgets/PieChart.module.css
@@ -33,6 +33,7 @@
 
 .chart canvas {
     width: 100%;
+    height: 100%;
 }
 
 .label-container {
